# rmrb_skill

./: .gitignore  README.md  SKILL.md  install.bat  install.sh  pyproject.toml  requirements.txt  rmrb_download_once.py  rmrb_download_playwright.py  upload_mineru.py
.claude/: settings.json
docs/superpowers/specs/: 2026-03-19-rmrb-skill-design.md
scripts/: install.bat  install.sh
src/rmrb_fetcher/: __init__.py  cli.py  downloader.py
