[project]
name = "rmrb-pdf-fetcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.58.0",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
    "schedule>=1.2.2",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
